--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -35,7 +35,7 @@ $g-v-padding:4vh;
 //colors
 $c-white:#ffffff;
 $c-black:#000000; 
-$c-background:#fff;
+$c-background:#000126;
 $c-gray:rgb(40, 40, 40);
 $c-blue:rgb(42, 40, 120);
 $c-dark-gray:#282924;
