--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,7 +1,7 @@
 body, html {
 	height:100%;
 	-webkit-font-smoothing: antialiased;
-	overflow:hidden;
+	//overflow:hidden;
 	width:100%;
 	left:0;
 }
