--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,13 +36,12 @@
 @import "templates/interests";
 @import "templates/jobs";
 @import "templates/news";
+*/
 
 //partials
-@import "partials/explore-form";
-@import "partials/logo";
-@import "partials/logomark";
-@import "partials/playground";
-@import "partials/recent-blog";
-@import "partials/recent-news";
-*/
+@import "partials/bottom-section";
+@import "partials/credits";
+@import "partials/top-section";
+@import "partials/video";
+
 
