--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -5,3 +5,9 @@ button:focus, button:active, button:hover {
 .btn, .btn--secondary, .rte .btn--secondary, .rte .btn, .rte .btn--secondary {
 	border-radius:0;
 }
+
+.button--mute {
+	position:fixed;
+	top:0;
+	right:0;
+}
