--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,58 +1,13 @@
-
 footer {
-	
-	margin-top:$g-unit * 6;
-	margin-bottom:$g-unit * .5;
-	
-	clear:left;
-	
-	.back-to-top {
-		@include respond-to(mobile-portrait) {
-			display:block;
-			margin-top:$g-unit * 1;
-		}
-		
-		a {
-			cursor:n-resize;
-		}
-	}
+	margin:5vw 0 2vw 0;
 	
 	ul {
+		text-align:center;
+		
 		li {
-			list-style:none;
 			display:inline-block;
-			font-size:18px;
-			
-			* {
-				display:inline-block;
-			}
-			
-			.arrow {
-				margin-left:0;
-				
-				margin-top:.2em;
-				
-				img {
-					height:15px;
-				}
-			}
-			
-			@include respond-to(mobile-portrait) {
-				display:block;
-			}
-			
-			p, a {
-				font-size:18px;
-			
-			}
-			
 			a {
-				@include opacity(.5);
-				
-				&:hover {
-					@include opacity(1);
-				}
-				
+				color:$c-white;
 			}
 		}
 	}
