--- a/src/scss/modules/_section.scss
+++ b/src/scss/modules/_section.scss
@@ -2,21 +2,10 @@ section {
 	
 	width:100%;
 	//min-height:100%;
-	position:absolute !important;
+	//position:absolute !important;
 	top:0;
 }
 
-
-.main-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-	margin:0;
-	padding:0;
-	max-width:100%;
-	width:100%;
-	min-height:100%;
-}
 
 
 .scroll-container {
