--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -129,6 +129,59 @@ $h1-line-height: (
 );
 
 
+
+$anno-body-font-sizes: (
+  null  : 28px,
+  $break-ipad : 3.71vw,
+  $break-laptop : 3.71vw,
+  $break-desktop: 3.71vw
+);
+
+$anno-body-line-height: (
+  null  : 28px,
+  $break-ipad : 1.15,
+  $break-laptop : 1.15,
+  $break-desktop: 1.15
+);
+
+$anno-h2-font-sizes: (
+	null  : 28px,
+	$break-ipad : 5.85vw,
+	$break-laptop : 5.85vw,
+	$break-desktop: 5.85vw
+);
+
+$anno-h2-line-height: (
+	null  : 28px,
+	$break-ipad : 1.15,
+	$break-laptop : 1.15,
+	$break-desktop: 1.15
+);
+
+$eurostile-body-font-sizes: (
+  null  : 28px,
+  $break-ipad : 1.76vw,
+  $break-laptop : 1.76vw,
+  $break-desktop: 1.76vw
+);
+
+$eurostile-body-line-height: (
+  null  : 28px,
+  $break-ipad : 1.15,
+  $break-laptop : 1.15,
+  $break-desktop: 1.15
+);
+
+
+$eurostile-smaller-body-font-sizes: (
+  null  : 28px,
+  $break-ipad : 1.10vw,
+  $break-laptop : 1.10vw,
+  $break-desktop: 1.10vw
+);
+
+
+
 @mixin line-height($fs-map) {
   @each $fs-breakpoint, $fs-font-size in $fs-map {
     @if $fs-breakpoint == null {
