--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -19,4 +19,9 @@ button {
 .button--submit {
 	border:1px solid $c-white;
 	padding:0 .5em;
+	
+	&:hover {
+		background:$c-background;
+		border-color:$c-background;
+	}
 }
