--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,9 +1,10 @@
 body, html {
-	height:100%;
+	//height:100%;
 	-webkit-font-smoothing: antialiased;
 	//overflow:hidden;
 	width:100%;
 	left:0;
+	overflow:hidden;
 }
 
 
