--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -1,13 +1,16 @@
 .wrapper {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    top: 0;
-    height: 100%;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100vw;
+	height:100%;
 	overflow-y:scroll;
-	-webkit-overflow-scrolling: touch;
+}
+
+.wrapper.looped {
 	
-	@include respond-to(mobile-landscape) {
-		//display:none;
+	.top-section {
+		margin-top:100vh;
 	}
+	
 }
