--- a/src/scss/partials/_bottom-section.scss
+++ b/src/scss/partials/_bottom-section.scss
@@ -1,10 +1,26 @@
-#bottom-section {
+.bottom-section {
 	text-align:center;
+	//margin-top:150vh;
+	margin-bottom:300vh;
+	position:relative;
+	z-index:2;
 	
-	#information {
-		width:80%;
-		margin:0 auto;
-		margin-top:5vw;
+	* {
+		//background:$c-background;
+	}
+	
+	.information {
+		width:100%;
+		padding-top:5vw;
+		
+		p {
+			width:80%;
+			margin:0 auto;
+			
+			@include respond-to(mobile-portrait) {
+				width:88%;
+			}
+		}
 	}
 	
 	.masonry-type {
@@ -12,23 +28,94 @@
 		@include flex-direction(column)
 		
 		//width:100%;
-	
+		@include respond-to(mobile-portrait) {
+			padding-bottom:5vw;
+		}
 		
 		h2 {
 			text-align:left;
 			width:38.5vw;
 			
+			@include respond-to(mobile-portrait) {
+				width:100%;
+			}
+			
 			&:first-child {
 				width:40vw;
 				margin-left:12vw;
+				
+				@include respond-to(mobile-portrait) {
+					width:60%;
+					margin:0 auto;
+					text-align:center;
+				}
 			}
 			
 			&:last-child {
-				margin-top:5vw;
+				padding-top:5vw;
 				width:48vw;
 				margin-right:1.8vw;
 				@include align-self(flex-end);
+				
+				@include respond-to(mobile-portrait) {
+					width:88%;
+					margin:0 auto;
+					text-align:center;
+				}
 			}
+		}
+	}
+	
+	.gradient-swipe-holder {
+		height:100vh;
+		//position:fixed;
+		left:0;
+		top:100vh;
+		z-index:2;
+		width:100%;
+		background:transparent;
+		&.rotate {
+			//-ms-transform: rotate(180deg); /* IE 9 */
+		   // -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+			//transform: rotate(180deg);
+		}
+		
+		.gradient-swipe {
+			height:50vh;
+			width:100%;
+			pointer-events:none;
+			background: -webkit-linear-gradient(transparent, $c-background); /* For Safari 5.1 to 6.0 */
+		    background: -o-linear-gradient(transparent, $c-background); /* For Opera 11.1 to 12.0 */
+		    background: -moz-linear-gradient(transparent, $c-background); /* For Firefox 3.6 to 15 */
+		    background: linear-gradient(transparent, $c-background); /* Standard syntax */
+		}
+		
+		.gradient-solid {
+			height:50vh;
+			width:100%;
+			background:$c-background;
+		}
+		
+	}
+	
+	.gradient-bottom-holder {
+		height:100vh;
+		background:transparent;
+		
+		.gradient-swipe {
+			height:50vh;
+			width:100%;
+			pointer-events:none;
+			background: -webkit-linear-gradient($c-background, transparent); /* For Safari 5.1 to 6.0 */
+		    background: -o-linear-gradient($c-background, transparent); /* For Opera 11.1 to 12.0 */
+		    background: -moz-linear-gradient($c-background, transparent); /* For Firefox 3.6 to 15 */
+		    background: linear-gradient($c-background, transparent); /* Standard syntax */
+		}
+		
+		.gradient-solid {
+			height:50vh;
+			width:100%;
+			background:$c-background;
 		}
 	}
 }
