--- a/src/scss/partials/_credits.scss
+++ b/src/scss/partials/_credits.scss
@@ -1,11 +1,11 @@
-#credits {
+.credits {
 	
 	ul {
 		//@include flexbox;
 		//@include flex-direction(column);
 		margin:0;
 		padding:0;
-		margin-top:5vw;
+		padding-top:5vw;
 		width:100%;
 		display:table;
 		
@@ -17,25 +17,41 @@
 			//width:50%;
 			clear:left;
 			width:100%;
-			margin-top:1vw;
+			padding-top:1vw;
 			vertical-align:bottom;
+			
+			@include respond-to(mobile-portrait) {
+				padding-bottom:2vw;
+			}
 			
 			h4, h5 {
 				vertical-align:bottom;
 				display:inline-block;
 				width:48%;
 				
+				@include respond-to(mobile-portrait) {
+					width:100%;
+					text-align:center;
+				}
 			}
 			
 			h4 {
 				text-align:right;
 				line-height:1.85;
 				margin-right:1%;
+				
+				@include respond-to(mobile-portrait) {
+					text-align:center;
+				}
 			}
 			
 			h5 {
 				text-align:left;
 				margin-left:1%;
+				
+				@include respond-to(mobile-portrait) {
+					text-align:center;
+				}
 			}
 		}
 	}
