--- a/src/scss/partials/_top-section.scss
+++ b/src/scss/partials/_top-section.scss
@@ -1,11 +1,20 @@
-#top-section {
+.top-section {
 	@include flexbox;
 	@include flex-direction(column);
 	@include justify-content(space-between);
 	
-	height:100%;
+	height:100vh;
 	min-height:800px;
 	text-align:center;
+	position:relative;
+	z-index:2;
+	//position:fixed;
+	top:0;
+	left:0;
+	
+	@include respond-to(mobile-portrait) {
+		min-height:auto;
+	}
 	
 	header {
 		margin-top:5vw;
@@ -18,15 +27,25 @@
 		letter-spacing:-.01em !important;
 		width:80vw;
 		margin:0 auto;
+		
+		@include respond-to(mobile-portrait) {
+			font-size:22vw;
+			width:100vw;
+		}
 	}
 	
 	.collection-callout {
 		width:60vw;
 		margin:0 auto;
 		line-height:1em;
+		
+		@include respond-to(mobile-portrait) {
+			line-height:1.15;
+			width:80vw;
+		}
 	}
 	
-	#newsletter {
+	.newsletter {
 		margin-bottom:5vw;
 	}
 	
@@ -34,11 +53,23 @@
 		input, button {
 			line-height:4.68vw;
 			padding:0 .5em;
+			
+			@include respond-to(mobile-portrait) {
+				line-height:10vw;
+			}
 		}
 		
 		button {
 			margin-left:.25em;
 		}
-	}
+	}	
+	
+	
 
+}
+
+.scrolling {
+	.top-section {
+		pointer-events:none;
+	}
 }
