--- a/src/scss/partials/_video.scss
+++ b/src/scss/partials/_video.scss
@@ -1,8 +1,54 @@
-#video {
-	position:absolute;
+#video-container {
+	position:fixed;
 	top:0;
 	left:0;
-	width:100%;
+	width:100vw;
 	height:100%;
 	pointer-events:none;
+	z-index:-1;
+	overflow:hidden;
+	
+	.video-scroll {
+		//position:absolute;
+		left:0;
+		height:100%;
+		width:100000px;
+		pointer-events:none;
+		
+		.video-holder {
+			height:100%;
+			width:calc(100vh * 1.7777);
+			position:absolute;
+			left:100vw;
+			&:first-child {
+				left:0;
+			}
+			video {
+				
+				
+				height:100%;
+				
+				
+				//float:left;
+				//display:none;
+				//display:inline-block;
+			}
+		}
+		
+	}
+	
+	
+	
+}
+
+#color-overlay {
+	background:$c-background;
+	position:fixed;
+	display:none;
+	top:0;
+	left:0;
+	width:100vw;
+	height:100vh;
+	z-index:1;
+	@include opacity(0);
 }
