--- a/src/scss/partials/_bottom-section.scss
+++ b/src/scss/partials/_bottom-section.scss
@@ -1,7 +1,7 @@
 .bottom-section {
 	text-align:center;
 	//margin-top:150vh;
-	margin-bottom:300vh;
+	margin-bottom:100%;
 	position:relative;
 	z-index:2;
 	
