--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -5,12 +5,13 @@
 	width:100vw;
 	height:100%;
 	overflow-y:scroll;
+	display:none;
 }
 
 .wrapper.looped {
 	
 	.top-section {
-		margin-top:100vh;
+		//margin-top:100vh;
 	}
 	
 }
