--- a/src/scss/partials/_video.scss
+++ b/src/scss/partials/_video.scss
@@ -7,6 +7,7 @@
 	pointer-events:none;
 	z-index:-1;
 	overflow:hidden;
+	display:none;
 	
 	.video-scroll {
 		//position:absolute;
@@ -44,7 +45,8 @@
 #color-overlay {
 	background:$c-background;
 	position:fixed;
-	display:none;
+	pointer-events:none;
+	//display:none;
 	top:0;
 	left:0;
 	width:100vw;
