--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -148,6 +148,25 @@ p {
 	@include line-height($anno-body-line-height); 
 }
 
+.landscape-format {
+	h2 {
+		font-size:9vh;
+	}
+	
+	h4 {
+		font-size: 2.6vh;
+	}
+	
+	h5 {
+		font-size:6vh;
+	}
+	
+	p {
+		font-size:6vh;
+	}
+	
+	
+}
 
 /* FORM STYLING */
 
