--- a/src/scss/partials/_top-section.scss
+++ b/src/scss/partials/_top-section.scss
@@ -14,6 +14,7 @@
 	
 	@include respond-to(mobile-portrait) {
 		min-height:auto;
+		height:88vh;
 	}
 	
 	header {
@@ -31,6 +32,7 @@
 		@include respond-to(mobile-portrait) {
 			font-size:22vw;
 			width:100vw;
+			line-height:1;
 		}
 	}
 	
