fixed video glitchy by changing to transform3d

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import "modules/animation";
 @import "modules/article";
 @import "modules/aside";
+@import "modules/audio";
 @import "modules/buttons";
 @import "modules/footer";
 @import "modules/header";
