working version before changes to video element

--- a/src/scss/partials/_credits.scss
+++ b/src/scss/partials/_credits.scss
@@ -17,7 +17,7 @@
 			//width:50%;
 			clear:left;
 			width:100%;
-			padding-top:1vw;
+			padding-top:.5vw;
 			vertical-align:bottom;
 			
 			@include respond-to(mobile-portrait) {
