--- a/src/scss/partials/_top-section.scss
+++ b/src/scss/partials/_top-section.scss
@@ -37,13 +37,13 @@
 	}
 	
 	.collection-callout {
-		width:60vw;
+		width:70vw;
 		margin:0 auto;
 		line-height:1em;
 		
 		@include respond-to(mobile-portrait) {
 			line-height:1.15;
-			width:80vw;
+			width:90vw;
 		}
 	}
 	
@@ -53,12 +53,18 @@
 	
 	form {
 		input, button {
-			line-height:4.68vw;
-			padding:0 .5em;
+			@extend %small;
+			text-transform:none !important;
+			line-height:3.5;
+			padding:0 1em;
 			
 			@include respond-to(mobile-portrait) {
 				line-height:10vw;
 			}
+		}
+		
+		input {
+			text-transform:none;
 		}
 		
 		button {
@@ -99,7 +105,7 @@
 		}
 		
 		h3 {
-			font-size:1.575vh;
+			//font-size:1.575vh;
 		}
 		
 		.collection-callout {
@@ -110,8 +116,8 @@
 			margin-bottom:6vh;
 			
 			input, button {
-				line-height:8vh;
-				font-size:2.5vh;
+				//line-height:8vh;
+				//font-size:2.5vh;
 			}
 		}
 	}
