added lookbook and youtube video

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@
 //partials
 @import "partials/bottom-section";
 @import "partials/credits";
+@import "partials/lookbook";
 @import "partials/top-section";
 @import "partials/video";
 
