--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -11,7 +11,8 @@
 
 body {
 	@extend %globalText;
-	-webkit-font-smoothing:antialiased;
+	-webkit-font-smoothing:antialiased
+
 	//text-shadow: 0px 0px 2px rgba(0, 0, 3, 0.6);
 	
 	
@@ -67,6 +68,31 @@ a {
 		//color:$c-orange;
 	}
 } 
+
+a.svg-link {
+	svg:first-child {
+		
+	}
+	
+	svg:nth-child(2) {
+		display:none;
+	}
+	
+	&:hover {
+		svg:nth-child(1) {
+			display:none;
+		}
+	
+		svg:nth-child(2) {
+			display:inline-block;
+		}
+	}
+	
+	.svg-link-text {
+		display:block;
+		line-height:1;
+	}
+}
 
 button {
 	background:none;
@@ -252,7 +278,7 @@ p {
 
 .landscape-format {
 	h2 {
-		font-size:9vh;
+		font-size:7.8vh;
 	}
 	
 	h3 {
@@ -364,3 +390,5 @@ hr {
 .no-wrap {
 	white-space: nowrap;
 }
+
+
