--- a/src/scss/partials/_top-section.scss
+++ b/src/scss/partials/_top-section.scss
@@ -19,6 +19,8 @@
 	
 	header {
 		margin-top:5vw;
+		
+		
 	}
 	
 	h1 {
@@ -49,6 +51,10 @@
 	
 	.newsletter {
 		margin-bottom:5vw;
+		
+		@include respond-to(mobile-portrait) {
+			margin-bottom:6vw;
+		}
 	}
 	
 	form {
@@ -60,12 +66,14 @@
 			
 			@include respond-to(mobile-portrait) {
 				line-height:10vw;
+				//font-size:16px !important;
 			}
 		}
 		
 		input {
 			text-transform:none;
 			min-width:140px;
+			width:13em;
 			
 			@include respond-to(mobile-portrait) {
 				width:140px;
