--- a/src/scss/partials/_top-section.scss
+++ b/src/scss/partials/_top-section.scss
@@ -66,7 +66,7 @@
 			
 			@include respond-to(mobile-portrait) {
 				line-height:10vw;
-				//font-size:16px !important;
+				font-size:16px !important;
 			}
 		}
 		
